--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -19,7 +19,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     url({{ STATIC_URL }}dist/img/nuevo_back.png)
                     {% endif %} no-repeat center center; background-size: cover;">
                     <!--<input type="checkbox" id="button-menu"  />-->
-                    {% if user.is_authenticated and user.username != user_profile.username %}
+                    {% if user.username != user_profile.username %}
                     <!-- si es usuario esta visitando un perfil que no es el suyo -->
                     <!-- Cambiamos el icono "+" por "reloj" mientras esperamos que acepte la peticion -->
                     <script type="text/javascript">
@@ -50,16 +50,13 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                                  -moz-box-shadow: 0 0 10px 0 rgba(255, 99, 71, 0.75);
                                  box-shadow: 0 0 10px 0 rgba(255, 99, 71, 0.75);{% endif %}">{% avatar user_profile class="user-pic" %}</div>
                         <div class="informacion">
-                            {% if user.is_authenticated and user.username == user_profile.username %}
+                            {% if user.username == user_profile.username %}
                             <!-- Si el usuario esta visitando su propio perfil -->
                             <span id="configurationOnProfile" class="fa fa-cog" title="Configuracion"></span>
                             <span onclick="location.href='{% url "user_groups:list-group" %}'" id="conf"
                                                                                                class="fa fa-users"
                                                                                                title="Grupos"></span>
                             <span id="publish3" class="fa fa-paper-plane" title="Escribir"></span>
-                            {% elif not user.is_authenticated %} <!-- si es usuario anonimo -->
-                            <span id="ilike_profile" class="fa fa-heart" title="¡Me gusta!"
-                                                                         onclick=AJAX_likeprofile('anonymous')></span>
                             {% else %} <!-- si es usuario esta visitando un perfil que no es el suyo -->
                             <span id="addfriend" class="fa fa-plus" title="Seguir"
                                                                     onclick=AJAX_requestfriend('noabort');></span>
@@ -120,7 +117,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     <h4 class="info-user-stats">Activo hace: {{ node_profile.last_seen|timesince }}</h4>
                 </div>
                 <ul class="personal-card-controls">
-                    {% if user.is_authenticated and user.username != user_profile.username %}
+                    {% if user.username != user_profile.username %}
                     <li id="bloq-user"><i class="fa fa-ban" aria-hidden="true"></i></li>
                     {% endif %}
                     <li class="info-groups" title="Grupos de {{ user_profile.username }}"><i class="fa fa-users"
@@ -129,7 +126,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     <li class="info-trof" title="Logros de {{ user_profile.username }}"><i class="fa fa-trophy"
                                                                                            aria-hidden="true"></i>
                     </li>
-                    {% if user.is_authenticated and user.username == user_profile.username %}
+                    {% if user.username == user_profile.username %}
                     <li class="info-content" title="Mis publicaciones"><i class="fa fa-at"
                                                                           aria-hidden="true"></i></li>
                     {% endif %}
