--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -279,10 +279,9 @@
                                             <i id="like-value" class="fa">{% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
                                         </li>
                                         {% endwith %}
-                                        <li title="Añadir a mi skyline" id="share-{{node.pk}}" data-id="{{ node.pk }}" {% if node.pk|user_in_shared_list:user.pk %}class="remove-timeline"
-                                        style="color: #bbdefb;" {% else %}class="add-timeline"{% endif %}
+                                        <li title="Añadir a mi skyline" id="share-{{node.pk}}" data-id="{{ node.pk }}" class="add-timeline"
                                         ><i
-                                            class="fa fa-quote-right" aria-hidden="true"> </i></li>
+                                        class="fa fa-quote-right" aria-hidden="true"> </i></li>
                                     <li title="Responder" class="reply-comment"><i class="fa fa-reply"
                                                                                    id="reply-caja-comentario-{{ node.pk }}"></i>
                                     </li>
@@ -370,3 +369,11 @@
         </div>
     {% endwith %}
     {% endif %} 
+    <script>
+    {% for s in pubs_shared %}
+        $('#share-' + {{ s.shared_publication__id }}).children().text(' ' + {{ s.total }});
+    {% endfor %}
+    {% for m in pubs_shared_with_me %}
+        $('#share-' + {{ m.shared_publication__id }}).attr('class', 'remove-timeline').css('color', '#bbdefb');
+    {% endfor %}
+    </script>
