--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -183,7 +183,7 @@
                                                 </div>
                                                 <div class="card-action">
                                                     <a class="blue-text text-darken-2"
-                                                       href="/publication/{{ node.shared_publication.publication.pk }}">Ver</a>
+                                                       href="/publication_pdetail/{{ node.shared_photo_publication.pk }}">Ver</a>
                                                 </div>
                                             </div>
                                         {% endif %}
