--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -12,8 +12,25 @@
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/publication_detail.css">
     {% endcompress %}
 {% endblock %}
-{% block title %} <title> Skyfolk - Publicacion #{{ publication.0.id }}</title> {% endblock %}
+{% block title %} <title> Skyfolk - Publicacion #{{ publication_id }}</title> {% endblock %}
 {% block content %}
+    <style>
+        .card-content img {
+            max-width: 100%;
+            max-height: 100%;
+            box-shadow: 0 1px 5px rgba(30, 136, 229, 0.15);
+        }
+
+        .comment .fa-share {
+            color: #1e88e5;
+            font-style: normal;
+        }
+        .comment .fa-user-plus {
+            color: #1e88e5;
+            font-style: normal;
+        }
+    </style>
+
     <div class="container" id="publication-thread">
         {% comment %}
             Formulario para citar un comentario
@@ -82,27 +99,9 @@
                                             <a href="#">+ Mostrar más</a>
                                         </div>
                                     </div>
-                                    {% if node.event_type == 2 %}
-                                        <style>
-                                            .comment .fa-user-plus {
-                                                color: #1e88e5;
-                                                font-style: normal;
-                                            }
-                                        </style>
-                                    {% endif %}
+                                    
                                     {% if node.shared_publication %}
-                                        <style>
-                                            .card-content img {
-                                                    max-width: 100%;
-                                                    max-height: 100%;
-                                                    box-shadow: 0 1px 5px rgba(30, 136, 229, 0.15);
-                                                }
-
-                                            .comment .fa-share {
-                                                color: #1e88e5;
-                                                font-style: normal;
-                                            }
-                                        </style>
+                                        
                                         <div class="card grey lighten-5">
                                             <div class="card-content black-text">
                                                 {% avatar node.shared_publication.author %}<br>
@@ -166,18 +165,6 @@
                                     {% endif %}
                                 {% if node.shared_photo_publication %}
                                             {% comment %} Para publicaciones que contienen citas {% endcomment %}
-                                            <style>
-                                                .card-content img {
-                                                    max-width: 100%;
-                                                    max-height: 100%;
-                                                    box-shadow: 0 1px 5px rgba(30, 136, 229, 0.15);
-                                                }
-
-                                                .comment .fa-share {
-                                                    color: #1e88e5;
-                                                    font-style: normal;
-                                                }
-                                            </style>
                                             <div class="card grey lighten-5">
                                                 <div class="card-content black-text">
                                                     {% avatar node.shared_photo_publication.p_author %}<br>
@@ -289,34 +276,35 @@
                                 <div class="divider"></div>
                                 <div class="options_comentarios col s12" id="options-comments">
                                     <ul class="opciones">
-                                        {% if user.is_authenticated and user.username == node.author.username %}
+                                        {% if user.id == node.author.id %}
                                             {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
                                             <li class="trash-comment" title="Borrar comentario"><i
                                                     class="fa fa-trash"></i>
                                             </li>
-                                        {% elif user.is_authenticated and user.username == user_profile.username %}
+                                        {% elif user.id == node.author.id %}
                                             {% comment %} Si estamos visitando nuestro propio perfil {% endcomment %}
                                             <li class="trash-comment" title="Borrar comentario"><i
                                                     class="fa fa-trash"></i>
                                             </li>
                                         {% endif %}
-                                        {% if user.is_authenticated %}
-                                            {% comment %} Si el usuario esta logueado {% endcomment %}
-                                            <li title="No me gusta" class="hate-comment" id="fa-hate"
-                                                {% if node.pk|user_in_hated_list:user.pk %}style="color: rgb(186, 104, 200);"{% endif %}>
+                                        {% comment %} Si el usuario esta logueado {% endcomment %}
+                                        {% with node.user_give_me_hate.all as hates %}
+                                            <li title="No me gusta" class="hate-comment" {% if user in hates %} style="color: rgb(186, 104, 200);"{% endif %}
+                                                >
                                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
-                                                <i class="fa hate-value">{% with node.total_hates as hates %}{% if hates > 0 %}{{ hates|intword }}{% endif %}{% endwith %}</i>
+                                                <i class="fa hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
                                             </li>
-                                            <li id="like-heart" title="¡Me gusta!" class="like-comment"
-                                                {% if node.pk|user_in_liked_list:user.pk %}style="color: #f06292;"{% endif %}>
+                                        {% endwith %}
+                                        {% with node.user_give_me_like.all as likes %}
+                                            <li title="¡Me gusta!" class="like-comment"{% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}
+                                                >
                                                 <i class="fa fa-angle-up" aria-hidden="true"></i>
-                                                <i id="like-value" class="fa">{% with node.total_likes as likes %}{% if likes > 0 %}{{ likes|intword }}{% endif %}{% endwith %}</i>
+                                                <i class="fa like-value"> {% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
                                             </li>
-                                        {% endif %}
-                                        <li title="Añadir a mi skyline" data-id="{{ node.pk }}" class="add-timeline"
-                                            {% if node.pk|user_in_shared_list:user.pk %}id="remove_from_skyline"
-                                            style="color: #bbdefb;" {% else %}id="add_to_skyline"{% endif %}><i
-                                                class="fa fa-quote-right" aria-hidden="true"> {% with node.total_shares as shares %}{% if shares > 0 %}{{ shares|intword }}{% endif %}{% endwith %}</i></li>
+                                        {% endwith %}
+                                            <li title="Añadir a mi skyline" id="share-{{node.id}}" data-id="{{ node.pk }}" class="add-timeline"
+                                            ><i
+                                                class="fa fa-quote-right" aria-hidden="true"> </i></li>
                                         <li title="Responder" class="reply-comment"><i class="fa fa-reply"
                                                                                        id="reply-caja-comentario-{{ node.pk }}"></i>
                                         </li>
@@ -338,4 +326,12 @@
         {% endrecursetree %}
     </div>
     <script src="{{ STATIC_URL }}js/publication_detail.js" type="text/javascript"></script>
+    <script>
+    {% for s in pubs_shared %}
+        $('#share-' + {{ s.shared_publication__id }}).children().text(' ' + {{ s.total }});
+    {% endfor %}
+    {% for m in pubs_shared_with_me %}
+        $('#share-' + {{ m.shared_publication__id }}).attr('class', 'remove-timeline').css('color', '#bbdefb');
+    {% endfor %}
+    </script>
 {% endblock %}
