+ Mensaje cuando eliminan una publicacion compartida + Mejoras en skyline, publication detail...

--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -91,7 +91,7 @@
                                     <div class="row">
                                         <div class="author-controls">
                                             <a id="edit-photo"
-                                               class="waves-effect waves-light btn right green">Editar</a>
+                                               class="waves-effect waves-light btn right blue">Editar</a>
                                             <a id="del-photo"
                                                class="waves-effect waves-light btn right red">Eliminar</a>
                                             <div class="edit-form" id="wrapper-edit-form">
