--- a/photologue/templates/photologue/publications_entries.html
+++ b/photologue/templates/photologue/publications_entries.html
@@ -4,9 +4,7 @@
 {% load avatar_tags %}
 {% load mptt_tags %}
 {% load embed_video_tags %}
-
-{% for node in publications %}
-    {% recursetree node %}
+    {% for node in publications %}
         <div class="row">
             <div class="col s12">
                 <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
@@ -15,7 +13,7 @@
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
                   data-tooltip="Ver conversación completa"><i class="fa fa-plus-square-o" aria-hidden="true"></i></span>
-                        {% if user.is_authenticated and request.user.id == node.p_author.id %}
+                        {% if user.id == node.p_author.id %}
                             {% if node.event_type == 1 or node.event_type == 3 %}
                                 <span data-id="{{ node.pk }}" id="edit-comment-content"
                                       class="top-options edit-comment tooltipped"
@@ -29,7 +27,7 @@
                             <div class="articulo col s12">
                                 <div class="row">
                                     <div class="image col l1 m2 s2"
-                                         {% if user.is_authenticated and user.id == node.author.id %}title="¡Eres el autor!"
+                                         {% if   user.id == node.author.id %}title="¡Eres el autor!"
                                          style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
                                         <div class="usr-img img-responsive">{% avatar node.p_author %}</div>
                                     </div>
@@ -52,14 +50,6 @@
                                                 <a href="#">+ Mostrar más</a>
                                             </div>
                                         </div>
-                                        {% if node.event_type == 2 %}
-                                            <style>
-                                                .comment .fa-user-plus {
-                                                    color: #1e88e5;
-                                                    font-style: normal;
-                                                }
-                                            </style>
-                                        {% endif %}
                                         {% with node.images.all as images %}
                                             {% if images %}
                                             <div class="row images">
@@ -69,99 +59,97 @@
                                                 </div>
                                             {% endfor %}
                                             </div>
-                                            {% endif %}
-                                        {% endwith %}
-                                    {% with node.videos.all as videos %}
-                                        {% if videos %}
-                                            <div class="row videos">
-                                         {% for video in videos %}
-                                            <div class="col s4 z-depth-2 center">
-                                                    <video class="responsive-video" controls loop>
-                                                        <source src="{{ video.video.url }}" type="video/mp4">
-                                                    </video>
-                                            </div>
-                                        {% endfor %}
-                                            </div>
                                         {% endif %}
                                     {% endwith %}
-                                        {% if node.publication_photo_extra_content %}
-                                            {% if node.publication_photo_extra_content.video %}
-                                            {% video node.publication_photo_extra_content.video as my_video %}
-                                               {% video my_video "medium" %}
-                                            {% endvideo %}
-                                            {% else %}
-                                            {% comment %} Para publicaciones con URL {% endcomment %}
-                                            <div class="card small">
-                                                <div class="card-image">
-                                                    <img class="lazyload" data-src="{% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
-                                                    <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
-                                                </div>
-                                                <div class="card-content">
-                                                    <p>{{ node.publication_photo_extra_content.description }}</p>
-                                                </div>
-                                                <div class="card-action">
-                                                    <a href="{{ node.publication_photo_extra_content.url }}">Ver</a>
-                                                </div>
+                                {% with node.videos.all as videos %}
+                                    {% if videos %}
+                                        <div class="row videos">
+                                     {% for video in videos %}
+                                        <div class="col s4 z-depth-2 center">
+                                                <video class="responsive-video" controls loop>
+                                                    <source src="{{ video.video.url }}" type="video/mp4">
+                                                </video>
+                                        </div>
+                                    {% endfor %}
+                                        </div>
+                                    {% endif %}
+                                {% endwith %}
+                                    {% if node.publication_photo_extra_content %}
+                                        {% if node.publication_photo_extra_content.video %}
+                                        {% video node.publication_photo_extra_content.video as my_video %}
+                                           {% video my_video "medium" %}
+                                        {% endvideo %}
+                                        {% else %}
+                                        {% comment %} Para publicaciones con URL {% endcomment %}
+                                        <div class="card small">
+                                            <div class="card-image">
+                                                <img class="lazyload" data-src="{% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
                                             </div>
-                                            {% endif %}
+                                            <div class="card-content">
+                                                <p>{{ node.publication_photo_extra_content.description }}</p>
+                                            </div>
+                                            <div class="card-action">
+                                                <a href="{{ node.publication_photo_extra_content.url }}">Ver</a>
+                                            </div>
+                                        </div>
                                         {% endif %}
-                                    </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="divider"></div>
-                            <!-- OPCIONES DE COMENTARIOS -->
-                            <div class="options_comentarios" id="options-comments">
-                                <ul class="opciones">
-                                    {% if user.is_authenticated and user.username == node.p_author.username %}
-                                        {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
-                                        <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i>
-                                        </li>
-                                    {% elif user.is_authenticated and user.username == user_profile.username %}
-                                        {% comment %} Si estamos visitando nuestro propio perfil {% endcomment %}
-                                        <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i>
-                                        </li>
-                                    {% endif %}
-                                    {% if user.is_authenticated %}
-                                        {% comment %} Si el usuario esta logueado {% endcomment %}
-                                        <li title="No me gusta" class="hate-comment" id="fa-hate"
-                                            {% if node.pk|user_in_hated_photo_list:user.pk %}style="color: rgb(186, 104, 200);"{% endif %}>
-                                            <i class="fa fa-angle-down" aria-hidden="true"></i>
-                                            <i class="fa hate-value">{% with node.total_hates as hates %}{% if hates > 0 %}{{ hates|intword }}{% endif %}{% endwith %}</i>
-                                        </li>
-                                        <li id="like-heart" title="¡Me gusta!" class="like-comment"
-                                            {% if node.pk|user_in_liked_photo_list:user.pk %}style="color: #f06292;"{% endif %}>
-                                            <i class="fa fa-angle-up" aria-hidden="true"></i>
-                                            <i id="like-value" class="fa">{% with node.total_likes as likes %}{% if likes > 0 %}{{ likes|intword }}{% endif %}{% endwith %}</i>
-                                        </li>
-                                    {% endif %}
-                                    <li title="Añadir a mi skyline" data-id="{{ node.pk }}" class="add-timeline"
-                                        {% if node.pk|user_in_shared_photo_list:user.pk %}id="remove_from_skyline"
-                                        style="color: #bbdefb;" {% else %}id="add_to_skyline"{% endif %}><i
-                                            class="fa fa-quote-right" aria-hidden="true"> {% with node.total_shares as shares %}{% if shares > 0 %}{{ shares|intword }}{% endif %}{% endwith %}</i></li>
-                                    <li title="Responder" class="reply-comment"><i class="fa fa-reply"
-                                                                                   id="reply-caja-comentario-{{ node.pk }}"></i>
+                    </div>
+                    <div class="row">
+                        <div class="divider"></div>
+                        <!-- OPCIONES DE COMENTARIOS -->
+                        <div class="options_comentarios" id="options-comments">
+                            <ul class="opciones">
+                                {% if   user.id == node.p_author.id %}
+                                    {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
+                                    <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i>
                                     </li>
-                                </ul>
-                            </div>
+                                {% elif   user.id == node.p.author.id %}
+                                    {% comment %} Si estamos visitando nuestro propio perfil {% endcomment %}
+                                    <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i>
+                                    </li>
+                                {% endif %}
+                                    {% comment %} Si el usuario esta logueado {% endcomment %}
+                                    {% with node.user_give_me_hate.all as hates %}
+                                    <li title="No me gusta" class="hate-comment"{% if user in hates %} style="color: rgb(186, 104, 200);"{% endif %}>
+                                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                        <i class="fa hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
+                                    </li>
+                                    {% endwith %}
+                                    {% with node.user_give_me_like.all as likes %}
+                                    <li title="¡Me gusta!" class="like-comment" {% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}>
+                                        <i class="fa fa-angle-up" aria-hidden="true"></i>
+                                        <i class="fa like-value">{% with node.total_likes as likes %}{% if likes > 0 %}{{ likes|intword }}{% endif %}{% endwith %}</i>
+                                    </li>
+                                    {% endwith %}
+                                <li title="Añadir a mi skyline" id="share-{{node.pk}}" data-id="{{ node.pk }}" class="add-timeline"><i
+                                        class="fa fa-quote-right" aria-hidden="true"> </i></li>
+                                <li title="Responder" class="reply-comment"><i class="fa fa-reply"
+                                                                               id="reply-caja-comentario-{{ node.pk }}"></i>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    {% if user.is_authenticated and user.id == node.p_author.id %}
-                        {% if node.event_type == 1  or node.event_type == 3 %}
-                            <div data-user-id="{{ node.p_author.pk }}" id="author-controls-{{ node.pk }}"
-                                 class="author-controls">
-                                <div class="row">
-                                    <div class="col s12">
-                                        <form method="post" accept-charset="utf-8">{% csrf_token %}
-                                            <div class="row">
-                                                <div class="input-field col s12">
-                                                    <i class="material-icons prefix">create</i>
-                                                    <textarea class="materialize-textarea"
-                                                              placeholder="Escribe el contenido del nuevo mensaje"
-                                                              id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
-                                                              name="content" rows="10" required="required"
-                                                              style="height: 10.9969px;"></textarea>
+                </div>
+                {% if user.id == node.p_author.id %}
+                    {% if node.event_type == 1  or node.event_type == 3 %}
+                        <div data-user-id="{{ node.p_author.pk }}" id="author-controls-{{ node.pk }}"
+                             class="author-controls">
+                            <div class="row">
+                                <div class="col s12">
+                                    <form method="post" accept-charset="utf-8">{% csrf_token %}
+                                        <div class="row">
+                                            <div class="input-field col s12">
+                                                <i class="material-icons prefix">create</i>
+                                                <textarea class="materialize-textarea"
+                                                          placeholder="Escribe el contenido del nuevo mensaje"
+                                                          id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
+                                                          name="content" rows="10" required="required"
+                                                          style="height: 10.9969px;"></textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
@@ -220,8 +208,7 @@
                 </div>
             </div>
         </div>
-    {% endrecursetree %}
-{% endfor %}
+    {% endfor %}
 {% if publications|length > 19 %}
     {% with publications|last as last_pub %}
         <div class="row" id="loader_skyline">
@@ -239,4 +226,12 @@
             </div>
         </div>
     {% endwith %}
-{% endif %}
+    {% endif %}
+    <script>
+    {% for s in pubs_shared %}
+        $('#share-' + {{ s.shared_photo_publication__id }}).children().text(' ' + {{ s.total }});
+    {% endfor %}
+    {% for m in pubs_shared_with_me %}
+        $('#share-' + {{ m.shared_photo_publication__id }}).attr('class', 'remove-timeline').css('color', '#bbdefb');
+    {% endfor %}
+    </script>
