--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -1,7 +1,7 @@
 {% extends "account/base_interface.html" %}
 {% load avatar_tags %}
 {% load humanize %}
-{% block title %} <title>Skyfolk</title> {% endblock %}
+{% block title %} <title>Skyfolk / Novedades</title> {% endblock %}
 
 {% block extra-css %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/news.css"/>
@@ -15,10 +15,10 @@
 			Lista de los 6 usuarios con mayor afinidad.
 			{% endcomment %}
 			<div class="row">
-                <div id="recommendation-user" class="center">
+                <div id="recommendation-user">
                     <i class="fa fa-lg fa-spinner fa-spin"></i><br><br>
                     <script>
-                        window.user_id = {{ user.id }};
+                        window.follows = {{ follows }};
                     </script>
                     <script src="{{ STATIC_URL}}js/react/recommendations.js" type="text/javascript"></script>
                 </div>
@@ -72,7 +72,7 @@
 				<div data-id="{{ pub.id }}" class="col l3 m12 s12">
 					<div class="notice-item">
 						<div class="col l3 m2 s3 img">
-							{% avatar pub.author.username %}
+							{% avatar pub.author %}
 						</div>
 						<div class="col l8 m9 s8 author">
 							<a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a><i>{{ pub.author.first_name }} {{ pub.author.last_name }}</i>
