+ Filtros skyline terminados

--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -107,7 +107,7 @@ Template para el perfil de cada usuario
                                     </a>
                                 </div>
                                 {% else %} 
-                                <div class="btn-filters center row">
+                                <div class="btn-filters row">
                                     <div id="react">
                                         <i class="fa fa-lg fa-spinner fa-spin"></i><br><br>
                                     </div>
