+ Recortar back_image y actualizacion de admin

--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -224,4 +224,23 @@ label[for="id_image"] {
   margin-bottom: 5%;
   padding: 10px; }
 
+.crop-image-div {
+  position: absolute;
+  display: none;
+  top: 20%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: auto;
+  background-color: #fff;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  z-index: 9999; }
+  .crop-image-div .close-crop-image {
+    margin-right: 1%;
+    margin-top: 1%;
+    cursor: pointer;
+    color: grey; }
+
 /*# sourceMappingURL=configuracion.css.map */
