--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -1,6 +1,7 @@
 $blueskyfolk: #1e88e5
 $greycolor: #555
 $greyblue: #66757f
+$boxshadow: 0 1px 5px rgba(0, 0, 0, 0.15)
 
 .hgroup
   border-bottom: 1px solid $greyblue
@@ -236,3 +237,23 @@ label[for="id_image"]
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
   margin-bottom: 5%
   padding: 10px
+
+
+.crop-image-div
+  position: absolute
+  display: none
+  top: 20%
+  left: 0
+  right: 0
+  margin-left: auto
+  margin-right: auto
+  width: 50%
+  height: auto
+  background-color: #fff
+  box-shadow: $boxshadow
+  z-index: 9999
+  .close-crop-image
+    margin-right: 1%
+    margin-top: 1%
+    cursor: pointer
+    color: grey
