--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -48,9 +48,10 @@
                     {% block cf-title %}{% endblock %}
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="config-div">
                 <div class="col s12">
                     {% block cf-form %}{% endblock %}
+                    {% block cropper %}{% endblock %}
                 </div>
             </div>
         </div>
