--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -66,14 +66,13 @@
                 </form>
             </div>
         </div>
-        {% recursetree publication %}
-            <div class="row">
+         {% for node in publication %}
+            <div class="row row-pub">
                 <div class="col s12">
                     <div class="row">
-                        <div class="col offset-l1 {% if node.is_root_node %}l10 m12 s12 {% else %}l9 m11 s11{% endif %} wrapper"
+                        <div class="col wrapper{% if node.level == 0 %} col offset-l1 l10 m11 s12 {% else %} offset-l2 l9 m10 s11 style="border-right: 2px solid #1e88e5;"{% endif %}"
                              id="pub-{{ node.pk }}"
-                             data-id="{{ user.pk }}"
-                             {% if not node.is_root_node %}style="border-right: 2px solid #1e88e5;" {% endif %}>
+                             data-id="{{ user.pk }}">
                             <div class="row">
                                 <div class="image col l2 m2 s2">
                                     <div class="usr-img img-responsive">{% avatar node.author %}</div>
@@ -101,7 +100,6 @@
                                     </div>
                                     
                                     {% if node.shared_publication %}
-                                        
                                         <div class="card grey lighten-5">
                                             <div class="card-content black-text">
                                                 {% avatar node.shared_publication.author %}<br>
@@ -313,17 +311,13 @@
                             </div>
                             {% with publication as pub %}
                                 {% include "account/new_reply_extend_publication.html" %}
-                            {% endwith %}
+                                {% endwith %}
                         </div>
                     </div>
                 </div>
-                {% if not node.is_leaf_node %}
-                    <ul class="children">
-                        {{ children }}
-                    </ul>
-                {% endif %}
+                
             </div>
-        {% endrecursetree %}
+        {% endfor %}
     </div>
     <script src="{{ STATIC_URL }}js/publication_detail.js" type="text/javascript"></script> 
     <script src="{{ STATIC_URL }}js/socket_publication.js"></script>
