+ socket on photo_publication

--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -69,7 +69,7 @@
             <div class="row row-pub">
                 <div class="col s12">
                     <div class="row">
-                        <div class="col wrapper{% if node.level == 0 %} col offset-l1 l10 m11 s12 {% else %} offset-l2 l9 m10 s11 style="border-right: 2px solid #1e88e5;"{% endif %}"
+                        <div class="col wrapper{% if node.level == 0 %} col offset-l1 l10 m11 s12 {% else %} offset-l2 l9 m10 s11" style="border-right: 2px solid #1e88e5;"{% endif %}
                              id="pub-{{ node.pk }}"
                              data-id="{{ user.pk }}">
                              <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
